--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "array-move": "^4.0.0",
+    "axios": "^1.8.4",
     "fontfaceobserver": "^2.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.4.0",
+    "react-sortable-hoc": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
